--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 # NEXT_PUBLIC_API_BASE_URL=https://techmynt.com/streemlyne
 # NEXT_PUBLIC_BASE_PATH=/streemlyne
-NEXT_PUBLIC_BACKEND_URL=http://localhost:5000
+# NEXT_PUBLIC_BACKEND_URL=http://localhost:5000
+
+NEXT_PUBLIC_BACKEND_URL=https://cash2switch-backend.onrender.com
