--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-table": "^8.21.3",
     "@types/handlebars": "^4.0.40",
+    "@vercel/blob": "^2.2.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
